--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
         <img class="aside-year" alt="FrontFest '19" src="images/19.png">
         <p class="aside-message">La conferencia para toda la comunidad front-end</p>
         <p><strong>< 3ª edición ></strong></p>
-        <h3>09 FEB 2019 @ MADRID</h3>
+        <h2>09 FEB 2019 @ MADRID</h2>
         <ul class="aside-list">
           <li><a href="https://blog.frontfest.es" target="_blank">→ Blog</a></li>
+          <li><a href="#entradas">→ Entradas</a></li>
           <li><a href="#ponentes">→ Ponentes</a></li>
           <li><a href="#patrocinadores">→ Patrocinadores</a></li>
           <li><a href="#tabla-patrocinios">→ Tabla de patrocinios</a></li>
@@ -97,7 +98,93 @@
         </div>
       </div>
 
-      <div class="main-wrapper">
+      <section class="section">
+        <h1 id="entradas">Entradas</h1>
+
+        <p>Todas las entradas incluyen:</p>
+        <ul class="ticket-list">
+          <li><span>Acceso a las 8 charlas en un único track.</span></li>
+          <li><span>Desayuno, comida y merienda.</span></li>
+          <li><span>Bolsa de bienvenida.</span></li>
+        </ul>
+
+        <div class="ticket-row">
+
+          <div class="ticket-wrapper">
+            <div class="ticket">
+              <div>
+                <div class="ticket-title">
+                  <img src="images/icons/eagle.svg">
+                  <div>
+                    <h3>Early Bird</h3>
+                    <small>30 entradas</small>
+                  </div>
+                </div>
+                <!-- <p>Disponibles a partir del <strong>19 de noviembre</strong> a las <strong>12 del mediodía</strong>.</p> -->
+                <p>Disponibles próximamente.</p>
+              </div>
+              <div>
+                <div class="ticket-footer">
+                  <span class="ticket-price">25€</span>
+                  <!-- <a href="https://www.koliseo.com/" target="_blank" title="Comprar entrada Early Bird" class="btn">Comprar</a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="ticket-wrapper">
+            <div class="ticket">
+              <div>
+                <div class="ticket-title">
+                  <img src="images/icons/users.svg">
+                  <div>
+                    <h3>General</h3>
+                    <small>340 entradas</small>
+                  </div>
+                </div>
+                <p>Disponibles próximamente.</p>
+              </div>
+              <div>
+                <div class="ticket-footer">
+                  <span class="ticket-price">40€</span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="ticket-wrapper">
+            <div class="ticket">
+              <div>  
+                <div class="ticket-title">
+                  <img src="images/icons/student.svg">
+                  <div>
+                    <h3>Estudiante*</h3>
+                    <small>30 entradas</small>
+                  </div>
+                </div>
+                <p>Disponibles próximamente.</p>
+              </div>
+              <div>
+                <div class="ticket-footer">
+                  <span class="ticket-price">25€</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <p class="smaller-p">
+          *A los portadores de una entrada de estudiante se les requerirá presentar, el mismo día del evento, una fotocopia de la matrícula
+          (o documento similar) que acredite la condición de estudiante durante el curso actual (2018-19).
+        </p>
+
+      </section>
+
+      <hr>
+
+      <section class="section">
         <h1 id="ponentes">Ponentes</h1>
         <div class="speakers">
           <div class="speaker">
@@ -106,8 +193,8 @@
                 <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
               </div>
               <div class="speaker-desc">
-                <a target="_blank" href="https://twitter.com/posva"><img src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://github.com/posva"><img src="images/icons/color/Github.svg"></a>
+                <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
               </div>
               <div class="speaker-name">Eduardo San Martín</div>
             </div>
@@ -118,10 +205,10 @@
                 <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
               </div>
               <div class="speaker-desc">
-                <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img src="images/icons/color/Browser.svg"></a>
-                <a target="_blank" href="https://twitter.com/ecosdegenero"><img src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img src="images/icons/color/YouTube.svg"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img src="images/icons/color/Linkedin.svg"></a>
+                <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
+                <a target="_blank" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
               </div>
               <div class="speaker-name">José A. Vela</div>
             </div>
@@ -132,20 +219,20 @@
                   <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
                 </div>
                 <div class="speaker-desc">
-                <a target="_blank" href="https://twitter.com/CristinaGrim"><img src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://github.com/crisgrim"><img src="images/icons/color/Github.svg"></a>
-                <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img src="images/icons/color/Linkedin.svg"></a>
+                <a target="_blank" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
+                <a target="_blank" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
               </div>
               <div class="speaker-name">Cristina Ponce</div>
             </div>
           </div>
         </div>
         <p>... y 5 más que se elegirán a través del Call for Proposals y se anunciarán en los próximas días.</p>
-      </div>
+      </section>
 
       <hr>
 
-      <div class="main-wrapper">
+      <section class="section">
         <h1 id="patrocinadores">Patrocinadores</h1>
         <h2>Platinum</h2>
         <div>
@@ -164,56 +251,58 @@
         <div>
           <a href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
         </div>
-      </div>
+      </section>
 
       <hr>
 
-      <div class="main-wrapper">
+      <section class="section">
         <h1 id="tabla-patrocinios">Tabla de patrocinios</h1>
         <p>Si tu empresa quiere colaborar patrocinando nuestra conferencia, <strong>contáctanos por <a href="mailto:frontfest@gmail.com">email</a> y te daremos toda la información necesaria.</strong>
           Además, puedes descargar el <strong>dossier de patrocinios en formato PDF</strong> en los siguientes enlaces: <a href="./pdf/DossierPatrociniosES-FrontFest19.pdf">[ES]</a>
           <a href="./pdf/SponsorsDossierEN-FrontFest19.pdf">[EN]</a>.</p>
-        <table>
-          <thead>
-            <tr>
-              <th></th><th>Platinum <small>(máx. 3)</small></th><th>Gold <small>(máx. 4)</small></th><th>Silver <small>(∞)</small></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tamaño del logo (web, rollups, etc.)</td><td>L</td><td>M</td><td>S</td>
-            </tr>
-            <tr>
-              <td>Entradas para la conferencia</td><td>6</td><td>4</td><td>2</td>
-            </tr>
-            <tr>
-              <td>Tweets promocionales</td><td>5</td><td>3</td><td>2</td>
-            </tr>
-            <tr>
-              <td>Item en la bolsa de bienvenida</td><td>✓</td><td>✓</td><td>✓</td>
-            </tr>
-            <tr>
-              <td>Stand</td><td>✓</td><td>✓</td><td></td>
-            </tr>
-            <tr>
-              <td>Post en nuestro blog</td><td>✓</td><td>✓</td><td></td>
-            </tr>
-            <tr>
-              <td>Cena con organizadores y ponentes (2 personas)</td><td>✓</td><td></td><td></td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th></th><th>2500<small>€ (+IVA)</small></th><th>1750<small>€ (+IVA)</small></th><th>600<small>€ (+IVA)</small></th>
-            </tr>
-          </tfoot>
-        </table>
+        <div class="overflow-x">
+          <table>
+            <thead>
+              <tr>
+                <th></th><th>Platinum <small>(máx. 3)</small></th><th>Gold <small>(máx. 4)</small></th><th>Silver <small>(∞)</small></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tamaño del logo (web, rollups, etc.)</td><td>L</td><td>M</td><td>S</td>
+              </tr>
+              <tr>
+                <td>Entradas para la conferencia</td><td>6</td><td>4</td><td>2</td>
+              </tr>
+              <tr>
+                <td>Tweets promocionales</td><td>5</td><td>3</td><td>2</td>
+              </tr>
+              <tr>
+                <td>Item en la bolsa de bienvenida</td><td>✓</td><td>✓</td><td>✓</td>
+              </tr>
+              <tr>
+                <td>Stand</td><td>✓</td><td>✓</td><td></td>
+              </tr>
+              <tr>
+                <td>Post en nuestro blog</td><td>✓</td><td>✓</td><td></td>
+              </tr>
+              <tr>
+                <td>Cena con organizadores y ponentes (2 personas)</td><td>✓</td><td></td><td></td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th></th><th>2500<small>€ (+IVA)</small></th><th>1750<small>€ (+IVA)</small></th><th>600<small>€ (+IVA)</small></th>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
         <p>También aceptamos <strong>patrocinios en especies</strong> (1 tweet promocional, logo XS).</p>
-      </div>
+      </section>
 
       <hr>
 
-      <div class="main-wrapper">
+      <section class="section">
         <h1 id="cdc">Código de conducta</h1>
         <p><strong>FrontFest es un evento en el que no se permitirá ningún tipo de abuso ni discriminación por motivos de sexo, procedencia, raza, religión, discapacidad, aspecto físico, orientación sexual e identidad. Los participantes que violen estas reglas pueden ser sancionados o expulsados del evento a discreción.</strong></p>
         <p>FrontFest intenta favorecer la comunicación y los debates constructivos en un ambiente seguro, solidario, respetable y diverso.</p>
@@ -228,11 +317,11 @@
         </ul>
         <p>Los organizadores pedimos la colaboración de todos los asistentes, así pues si sufres algún tipo de conducta abusiva u observas que alguien puede estar siendo víctima de ella, te rogamos encarecidamente que nos lo comuniques para tomar las medidas oportunas.</p>
         <p>En cualquier caso, las medidas disciplinarias dependerán siempre de la decisión de los organizadores, y en caso de llegar a producirse una expulsión, nunca existirá posibilidad de reembolso del precio de la entrada.</p>
-      </div>
+      </section>
 
       <hr>
 
-      <div class="main-wrapper">
+      <section class="section">
         <h1 id="quienes-somos">Quiénes somos</h1>
         <p>FrontFest es una conferencia sin ánimo de lucro organizada por un equipo de 8 personas en su tiempo libre.</p>
         <ul class="list-founders">
@@ -246,7 +335,7 @@
           <li><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></li>
         </ul>
         <p><strong>FrontFest '19</strong> © 2018-2019</p>
-      </div>
+      </section>
 
     </main>
 
