Fix some details

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
       <section class="section">
         <h1 id="patrocinadores">Patrocinadores</h1>
         <h2>Platinum</h2>
-        <div>
+        <div class="sponsor-row">
           <a href="https://www.paradigmadigital.com/"><div class="sponsor-platinum"><img alt="Paradigma Digital" src="images/sponsors/paradigma.png"></div></a>
         </div>
         <h2>Gold</h2>
-        <div>
+        <div class="sponsor-row">
           <a href="https://www.opensistemas.com//"><div class="sponsor-gold"><img alt="Open Sistemas" src="images/sponsors/open-sistemas.png"></div></a>
         </div>
         <h2>Silver</h2>
@@ -248,7 +248,7 @@
           <a href="https://machiina.com/"><div class="sponsor-silver"><img alt="Machiina" src="images/sponsors/machiina.svg"></div></a>
         </div>
         <h2>En especies</h2>
-        <div>
+        <div class="sponsor-row">
           <a href="https://egghead.io/"><div class="sponsor-inkind"><img alt="egghead" src="images/sponsors/egghead.svg"></div></a>
         </div>
       </section>
