Adjust 'who are we' section

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
         <p>Todas las entradas incluyen:</p>
         <ul class="ticket-list">
-          <li><span>Acceso a las 8 charlas en un único track.</span></li>
-          <li><span>Desayuno, comida y merienda.</span></li>
-          <li><span>Bolsa de bienvenida.</span></li>
+          <li><span>Acceso a las 8 charlas en un único track.</li>
+          <li><span>Desayuno, comida y merienda.</li>
+          <li><span>Bolsa de bienvenida.</li>
         </ul>
 
         <div class="ticket-row">
@@ -125,7 +125,7 @@
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">25€</span>
+                  <span class="ticket-price">25€
                   <!-- <a href="https://www.koliseo.com/" target="_blank" title="Comprar entrada Early Bird" class="btn">Comprar</a> -->
                 </div>
               </div>
@@ -146,7 +146,7 @@
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">40€</span>
+                  <span class="ticket-price">40€
                 </div>
               </div>
 
@@ -167,7 +167,7 @@
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">25€</span>
+                  <span class="ticket-price">25€
                 </div>
               </div>
             </div>
@@ -325,14 +325,21 @@
         <h1 id="quienes-somos">Quiénes somos</h1>
         <p>FrontFest es una conferencia sin ánimo de lucro organizada por un equipo de 8 personas en su tiempo libre.</p>
         <ul class="list-founders">
-          <li><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></li>
-          <li><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></li>
-          <li><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></li>
-          <li><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></li>              
-          <li><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></li>
-          <li><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></li>
-          <li><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></li>
-          <li><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></li>
+          <li><span><a target="_blank" href="https://twitter.com/LuisCalvoDiaz">Luis Calvo</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/luisddm_">Luis de Dios</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/noemedinaweb">Noemi Medina</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/v4n3ss4ms">Vanessa Medina</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/marinalopezyap">Marina López</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/JuanRioPacheco">Juan del Río</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/rubnvp">Rubén Valseca</a></span></li>
+          <span class="bullet">•</span>
+          <li><span><a target="_blank" href="https://twitter.com/ignaciodenuevo">Ignacio Villanueva</a></span></li>
         </ul>
         <p><strong>FrontFest '19</strong> © 2018-2019</p>
       </section>
