Add Early Bird tickets

--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
                     <small>30 entradas</small>
                   </div>
                 </div>
-                <!-- <p>Disponibles a partir del <strong>19 de noviembre</strong> a las <strong>12 del mediodía</strong>.</p> -->
-                <p>Disponibles próximamente.</p>
+                <p>Disponibles a partir del <strong>19 de noviembre</strong> a las <strong>12 del mediodía</strong>.</p>
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">25€
-                  <!-- <a href="https://www.koliseo.com/" target="_blank" title="Comprar entrada Early Bird" class="btn">Comprar</a> -->
+                  <span class="ticket-price">25€</span>
+                  <a href="https://www.koliseo.com/frontfest/2019#/" target="_blank" title="Comprar entrada Early Bird" class="btn">Comprar</a>
                 </div>
               </div>
             </div>
@@ -146,7 +145,7 @@
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">40€
+                  <span class="ticket-price">40€</span>
                 </div>
               </div>
 
@@ -167,7 +166,7 @@
               </div>
               <div>
                 <div class="ticket-footer">
-                  <span class="ticket-price">25€
+                  <span class="ticket-price">25€</span>
                 </div>
               </div>
             </div>
