Hightlight early bird ticket box

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="ticket-row">
 
-          <div class="ticket-wrapper">
+          <div class="ticket-wrapper active">
             <div class="ticket">
               <div>
                 <div class="ticket-title">
