Add little description to the speakers

--- a/index.html
+++ b/index.html
@@ -185,17 +185,20 @@
 
       <section class="section">
         <h1 id="ponentes">Ponentes</h1>
-        <div class="speakers">
+        <div class="speaker-row">
           <div class="speaker">
             <div class="speaker-wrapper">
               <div class="speaker-img">
                 <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
               </div>
-              <div class="speaker-desc">
+              <div class="speaker-sn">
                 <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
                 <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
               </div>
-              <div class="speaker-name">Eduardo San Martín</div>
+              <div class="speaker-data">
+                <div><div class="speaker-name">Eduardo San Martín</div></div>
+                <div><div class="speaker-desc">Miembro del core team de Vue.js</div></div>
+              </div>
             </div>
           </div>
           <div class="speaker">
@@ -203,13 +206,16 @@
               <div class="speaker-img">
                 <img alt="José Antonio Vela" src="images/photos/JoseAntonioVela.jpg">
               </div>
-              <div class="speaker-desc">
+              <div class="speaker-sn">
                 <a target="_blank" href="https://ecosdegenero.blogspot.com/"><img alt="Web" src="images/icons/color/Browser.svg"></a>
                 <a target="_blank" href="https://twitter.com/ecosdegenero"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
                 <a target="_blank" href="https://www.youtube.com/user/josevelagenero"><img alt="YouTube" src="images/icons/color/YouTube.svg"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/joseamvela"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
               </div>
-              <div class="speaker-name">José A. Vela</div>
+              <div class="speaker-data">
+                <div><span class="speaker-name">José A. Vela</span></div>
+                <div><span class="speaker-desc">Sociólogo e investigador en género y videojuegos</span></div>
+              </div>
             </div>
           </div>
           <div class="speaker">
@@ -217,12 +223,15 @@
                 <div class="speaker-img">
                   <img alt="Cristina Ponce" src="images/photos/CristinaPonce.jpg">
                 </div>
-                <div class="speaker-desc">
+                <div class="speaker-sn">
                 <a target="_blank" href="https://twitter.com/CristinaGrim"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
                 <a target="_blank" href="https://github.com/crisgrim"><img alt="Github" src="images/icons/color/Github.svg"></a>
                 <a target="_blank" href="https://www.linkedin.com/in/cristina-ponce/"><img alt="Linkedin" src="images/icons/color/Linkedin.svg"></a>
               </div>
-              <div class="speaker-name">Cristina Ponce</div>
+              <div class="speaker-data">
+                <div><div class="speaker-name">Cristina Ponce</div></div>
+                <div><div class="speaker-desc">Senior Frontend Developer</div></div>
+              </div>
             </div>
           </div>
         </div>
