Early Bird Sold out

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
-                  <a href="https://www.koliseo.com/frontfest/2019#/" target="_blank" title="Comprar entrada Early Bird" class="btn">Comprar</a>
+                  <span>Agotadas :(</span>
                 </div>
               </div>
             </div>
