Improve tickets section

--- a/index.html
+++ b/index.html
@@ -86,87 +86,93 @@
 
       <div class="main-intro">
         <div class="main-intro-pictures">
-          <img src="images/photos/frontfest-main-01.jpg" alt="Edición anterior de FrontFest">
           <img src="images/photos/frontfest-main-02.jpg" alt="Edición anterior de FrontFest">
+          <img src="images/photos/frontfest-main-01.jpg" alt="Edición anterior de FrontFest">
           <img src="images/photos/frontfest-main-03.jpg" alt="Edición anterior de FrontFest">
           <img src="images/photos/frontfest-main-04.jpg" alt="Edición anterior de FrontFest">
         </div>
         <div class="main-intro-logo">
-          <div>
             <img src="./images/frontfest-logo.svg" alt="FrontFest">            
-          </div>
         </div>
       </div>
 
-      <section class="section">
-        <h1 id="entradas">Entradas</h1>
-
-        <p>Todas las entradas incluyen:</p>
-        <ul class="ticket-list">
-          <li><span>Acceso a las 8 charlas en un único track.</li>
-          <li><span>Desayuno, comida y merienda.</li>
-          <li><span>Bolsa de bienvenida.</li>
-        </ul>
-
+      <section class="section bg-dark">
         <div class="ticket-row">
 
-          <div class="ticket-wrapper active">
+          <div class="ticket-wrapper inactive">
             <div class="ticket">
               <div>
                 <div class="ticket-title">
                   <img src="images/icons/eagle.svg">
                   <div>
-                    <h3>Early Bird</h3>
+                    <h3>Entrada Early Bird</h3>
                     <small>30 entradas</small>
                   </div>
                 </div>
                 <p>Disponibles a partir del <strong>19 de noviembre</strong> a las <strong>12 del mediodía</strong>.</p>
+                <ul class="ticket-list">
+                  <li><span>Acceso al track único de 8 charlas.</li>
+                  <li><span>Desayuno, comida y merienda.</li>
+                  <li><span>Bolsa de bienvenida.</li>
+                </ul>
               </div>
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
-                  <span>Agotadas :(</span>
+                  <span class="btn inactive">Agotadas</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="ticket-wrapper">
+          <div class="ticket-wrapper active">
             <div class="ticket">
               <div>
                 <div class="ticket-title">
                   <img src="images/icons/users.svg">
                   <div>
-                    <h3>General</h3>
+                    <h3>Entrada general</h3>
                     <small>340 entradas</small>
                   </div>
                 </div>
-                <p>Disponibles próximamente.</p>
+                <p>No disponibles aún.</p>
+                <ul class="ticket-list">
+                  <li><span>Acceso al track único de 8 charlas.</li>
+                  <li><span>Desayuno, comida y merienda.</li>
+                  <li><span>Bolsa de bienvenida.</li>
+                </ul>
               </div>
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">40€</span>
+                  <span class="btn">Próximamente</span>
                 </div>
               </div>
 
             </div>
           </div>
 
-          <div class="ticket-wrapper">
+          <div class="ticket-wrapper active">
             <div class="ticket">
               <div>  
                 <div class="ticket-title">
                   <img src="images/icons/student.svg">
                   <div>
-                    <h3>Estudiante*</h3>
+                    <h3>Entrada de estudiante*</h3>
                     <small>30 entradas</small>
                   </div>
                 </div>
-                <p>Disponibles próximamente.</p>
+                <p>No disponibles aún.</p>
+                <ul class="ticket-list">
+                  <li><span>Acceso al track único de 8 charlas.</li>
+                  <li><span>Desayuno, comida y merienda.</li>
+                  <li><span>Bolsa de bienvenida.</li>
+                </ul>
               </div>
               <div>
                 <div class="ticket-footer">
                   <span class="ticket-price">25€</span>
+                  <span class="btn">Próximamente</span>
                 </div>
               </div>
             </div>
