Fix ticket anchor

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      <section class="section bg-dark">
+      <section class="section bg-dark" id="entradas">
         <div class="ticket-row">
 
           <div class="ticket-wrapper inactive">
