--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="description" content="La conferencia para toda la comunidad front-end @ Madrid, 9 de febrero de 2019 #FrontFest19">
   <meta name="keywords" content="evento, meetup, conferencia, madrid, software, front-end, frontend, html, css, javascript, desarrollo web" />
-  <meta name="theme-color" content="#F5B63F">
+  <meta name="theme-color" content="#222">
 
   <!-- twitter card  -->
   <meta name="twitter:card" content="summary" />
