Speaker profile template

--- a/index.html
+++ b/index.html
@@ -208,8 +208,12 @@
                 <img alt="Eduardo San Martín" src="images/photos/EduardoSanMartin.jpg">
               </div>
               <div class="speaker-sn">
-                <a target="_blank" href="https://twitter.com/posva"><img alt="Twitter" src="images/icons/color/Twitter.svg"></a>
-                <a target="_blank" href="https://github.com/posva"><img alt="Github" src="images/icons/color/Github.svg"></a>
+                <a target="_blank" href="https://twitter.com/posva">
+                  <img alt="Twitter" src="images/icons/color/Twitter.svg">
+                </a>
+                <a target="_blank" href="https://github.com/posva">
+                  <img alt="Github" src="images/icons/color/Github.svg">
+                </a>
               </div>
               <div class="speaker-data">
                 <div><a class="btn" href="#">Eduardo San Martín</a></div>
