Add dates for general tickets

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <small>340 entradas</small>
                   </div>
                 </div>
-                <p>No disponibles aún.</p>
+                <p>Disponibles a partir del <strong>2 de enero</strong> a las <strong>12 del mediodía</strong>.</p>
                 <ul class="ticket-list">
                   <li><span>Acceso al track único de 8 charlas.</li>
                   <li><span>Desayuno, comida y merienda.</li>
@@ -172,7 +172,7 @@
                     <small>30 entradas</small>
                   </div>
                 </div>
-                <p>No disponibles aún.</p>
+                <p>Disponibles a partir del <strong>2 de enero</strong> a las <strong>12 del mediodía</strong>.</p>
                 <ul class="ticket-list">
                   <li><span>Acceso al track único de 8 charlas.</li>
                   <li><span>Desayuno, comida y merienda.</li>
